# uptrading

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  Dockerfile  MANIFEST.in  deploy_commands.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-hyperopt.txt  requirements-upai-rl.txt  requirements-upai.txt  requirements.txt  setup.cfg  setup.py  setup.sh  uptrading.service  uptrading.service.watchdog
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
UNKNOWN.egg-info/: PKG-INFO
build_helpers/: publish_docker_arm64.sh  publish_docker_multi.sh
config_examples/: config_binance.example.json  config_bittrex.example.json  config_full.example.json  config_kraken.example.json  config_upai.example.json
docker/: Dockerfile.armhf  Dockerfile.custom  Dockerfile.develop  Dockerfile.jupyter  Dockerfile.plot  Dockerfile.upai  Dockerfile.upai_rl  docker-compose-jupyter.yml  docker-compose-upai.yml
docs/: requirements-docs.txt  utils.md
scripts/: rest_client.py  ws_client.py
tests/: conftest.py  conftest_trades.py  conftest_trades_usdt.py  pytest.sh  test_arguments.py  test_binance_mig.py  test_configuration.py  test_directory_operations.py  test_indicators.py  test_integration.py  test_log_setup.py  test_main.py  test_misc.py  test_plotting.py  test_strategy_updater.py  test_timerange.py  test_uptradingbot.py  test_wallets.py  test_worker.py
uptrading/: __init__.py  __main__.py  constants.py  exceptions.py  (+5 more)
uptrading.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+311 files in other folders)
