[metadata]
name = uptrading
version = attr: uptrading.__version__
author = Uptrading Team
author_email = uptrading@protonmail.com
description = Uptrading - Crypto Trading Bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bot-app/uptrading
project_urls =
    Bug Tracker = https://github.com/bot-app/uptrading/issues
license = GPLv3
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Unix
    Topic :: Office/Business :: Financial :: Investment


[options]
zip_safe = False
include_package_data = True
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock

packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    uptrading = uptrading.main:main

[flake8]
# Default from https://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-ignore
# minus E226
ignore = E121,E123,E126,E24,E704,W503,W504
max-line-length = 100
max-complexity = 12
exclude =
    .git,
    __pycache__,
    .eggs,
    user_data,
    .venv
    .env